test/classes/initializers/errors/iteratorDeinitMethodCalled.chpl
class IteratorDeinit {
  iter deinit() {}
}

proc main() {
  var i = new IteratorDeinit();
  writeln(i);
}
