test/classes/initializers/errors/iteratorDeinitMethodCalled.good
iteratorDeinitMethodCalled.chpl:2: error: iterators can't be the deinit method, please rename this iterator
